# src/admin/docs/swagger.json
@@ -10,11 +10,11 @@
         },
         "license": {
             "name": "AGPL 3.0",
-            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+            "url": "https://www.gnu.org/licenses/agpl-3.0.en.html"
         },
         "version": "1.0.0"
     },
-    "host": "localhost:8080",
+    "host": "localhost:3000",
     "basePath": "/api/v1",
     "paths": {
         "/gateways": {
@@ -27,13 +27,48 @@
                     "gateways"
                 ],
                 "summary": "Get a paginated list of gateways",
+                "parameters": [
+                    {
+                        "maximum": 10000000,
+                        "minimum": 1,
+                        "type": "integer",
+                        "description": "int valid",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "maximum": 100,
+                        "minimum": 5,
+                        "type": "integer",
+                        "description": "int valid",
+                        "name": "page_size",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "id",
+                            "name",
+                            "ip_address",
+                            "-id",
+                            "-name",
+                            "-ip_address"
+                        ],
+                        "type": "string",
+                        "description": "string enums",
+                        "name": "sort",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.Gateway"
+                                "type": "array",
+                                "items": {
+                                    "$ref": "#/definitions/models.Gateway"
+                                }
                             }
                         }
                     },
@@ -113,6 +148,12 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.Gateway"
+                        },
+                        "headers": {
+                            "Location": {
+                                "type": "string",
+                                "description": "/gateway/1"
+                            }
                         }
                     },
                     "400": {
@@ -162,6 +203,30 @@
                     }
                 }
             }
+        },
+        "/health": {
+            "get": {
+                "description": "get the status of server.",
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "root"
+                ],
+                "summary": "Show the status of server.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -184,7 +249,8 @@
             "required": [
                 "ipaddress",
                 "name",
-                "port"
+                "port",
+                "protocol"
             ],
             "properties": {
                 "created_at": {
@@ -205,7 +271,19 @@
                 },
                 "port": {
                     "description": "SIP Port of the gateway",
-                    "type": "string"
+                    "type": "integer",
+                    "maximum": 65535,
+                    "minimum": 1
+                },
+                "protocol": {
+                    "description": "Protocol used by the gateway",
+                    "type": "string",
+                    "enum": [
+                        "udp",
+                        "tcp",
+                        "tls",
+                        "any"
+                    ]
                 },
                 "updated_at": {
                     "description": "Updated time",
