# src/admin/models/gateway.go
@@ -2,34 +2,43 @@ package models
 
 import (
 	"fmt"
+	"log"
 	"time"
+
+	"pks.pyfreebilling.com/utils/filters"
 )
+
+type GetGatewayRequest struct {
+	ID int64 `uri:"id" binding:"required,min=1"`
+}
 
 // Gateway is the main gateway model
 type Gateway struct {
-	ID        uint      `json:"id" gorm:"primarykey"`                                                     // Gateway ID
-	CreatedAt time.Time `json:"created_at"`                                                               // Creation time
-	UpdatedAt time.Time `json:"updated_at"`                                                               // Updated time
-	Name      string    `json:"name" binding:"required" gorm:"not null:true"`                             // Name of the gateway
-	IpAddress string    `json:"ipaddress" binding:"required,ip" gorm:"not null:true"`                     // IP Address of the gateway
-	Port      string    `json:"port"  binding:"required,numeric,max=5" gorm:"not null:true,default:5060"` // SIP Port of the gateway
-	Protocol  string    `json:"protocol"  binding:"required,oneof=udp tcp tls" gorm:"default:udp"`        // Protocol used by the gateway
+	ID        int64     `json:"id" gorm:"primarykey"`                                                                                                 // Gateway ID
+	CreatedAt time.Time `json:"created_at"`                                                                                                           // Creation time
+	UpdatedAt time.Time `json:"updated_at"`                                                                                                           // Updated time
+	Name      string    `json:"name" binding:"required" gorm:"unique,not null:true"`                                                                  // Name of the gateway
+	IpAddress string    `json:"ip_address" binding:"required,ip" gorm:"uniqueIndex:idx_gw_ip_port_proto,not null:true"`                               // IP Address of the gateway
+	Port      int       `json:"port"  binding:"required,gte=1,lte=65535" gorm:"uniqueIndex:idx_gw_ip_port_proto,not null:true,default:5060"`          // SIP Port of the gateway
+	Protocol  string    `json:"protocol"  binding:"required,oneof=udp tcp tls any" gorm:"uniqueIndex:idx_gw_ip_port_proto,not null:true,default:udp"` // Protocol used by the gateway
 }
 
 // Getaways represents many gateways
 type Gateways []Gateway
 
 // GetGateway queries the DB to find a user by ID
-func GetGateway(gateway *Gateway, id string) error {
-	if err := DB.First(gateway, id).Error; err != nil {
+func GetGateway(gateway *Gateway, id int64) error {
+	if err := DB.Take(&gateway, id).Error; err != nil {
 		return err
 	}
 	return nil
 }
 
 // GetGateways queries the DB to find gateways with offset and limit
-func GetGateways(gateways *Gateways, gatewaysPerPage int, offset int) error {
-	if err := DB.Limit(gatewaysPerPage).Offset(offset).Find(gateways).Error; err != nil {
+func GetGateways(gateways *Gateways, filter filters.Filters) error {
+	sort := fmt.Sprintf(`"%s %s"`, filter.SortColumn(), filter.SortDirection())
+	log.Printf("Sort : %s", sort)
+	if err := DB.Limit(filter.Limit()).Offset(filter.Offset()).Order(filter.SortOrder()).Find(&gateways).Error; err != nil {
 		return err
 	}
 	return nil
@@ -41,6 +50,7 @@ func CountGateways() (int64, error) {
 	if err := DB.Table("gateways").Count(&gatewayCount).Error; err != nil {
 		return 0, err
 	}
+	log.Printf("Items count : %v", gatewayCount)
 	return gatewayCount, nil
 }
 
@@ -62,7 +72,7 @@ func UpdateGateway(gateway *Gateway) error {
 }
 
 // DeleteGateway deletes a gateway
-func DeleteGateway(id string) error {
+func DeleteGateway(id int64) error {
 	if err := DB.Delete(&Gateway{}, id).Error; err != nil {
 		return err
 	}
